Requirements expanded and moved to a chapter

--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -7,6 +7,6 @@ Om de focus binnen Functioneel Programmeren op de essentie te houden, is een gra
 In dit ontwerpproject is \emph{Canvas.hs} ontwikkeld; een omgeving die Haskell-gebruikers in staat stelt op eenvoudige wijze grafische elementen op een HTML5 canvas te presenteren. Canvas.hs is ontwikkeld met het oog op gebruiksgemak en eenvoud zonder de mogelijkheid tot uitbreiding en het toevoegen van geavanceerde functionaliteit onnodig te beperken.
 
 \subsubsection{Verslagstructuur}
-In dit verslag wordt in \autoref{hoofdstuk:ontwerp} het ontwerp van Canvas.hs beschreven. Dit hoofdstuk is onderverdeeld in de secties: \halfref{sec:requirements}, \halfref{sec:globaal}, \halfref{sec:detail}, \halfref{sec:testplan} en \halfref{sec:testresultaten}. \autoref{hoofdstuk:conclusie} beschrijft de conclusies van dit project en in \autoref{hoofdstuk:evaluatie} wordt dit project met zijn uitkomsten geëvalueerd. Vervolgens wordt in \fullref{sec:gebruikershandleiding} een handleiding gepresenteerd die gebruikers van Canvas.hs aanwijzingen geeft over hoe de omgeving gebruikt en uitgebreid kan worden.
+In dit verslag wordt in \autoref{hoofdstuk:requirements} de requirements beschreven. In  \autoref{hoofdstuk:ontwerp} wordt het ontwerp van Canvas.hs beschreven. Dit hoofdstuk is onderverdeeld in de secties: \halfref{sec:globaal}, \halfref{sec:detail}, \halfref{sec:testplan} en \halfref{sec:testresultaten}. \autoref{hoofdstuk:conclusie} beschrijft de conclusies van dit project en in \autoref{hoofdstuk:evaluatie} wordt dit project met zijn uitkomsten geëvalueerd. Vervolgens wordt in \fullref{sec:gebruikershandleiding} een handleiding gepresenteerd die gebruikers van Canvas.hs aanwijzingen geeft over hoe de omgeving gebruikt en uitgebreid kan worden.
 
 
