--- a/verslag.tex
+++ b/verslag.tex
@@ -13,6 +13,7 @@
 \usepackage[T1]{fontenc}  
 \usepackage{textcomp}  
 \usepackage{lmodern}  
+\usepackage{float}
 
 \DeclareCaptionFont{white}{ \color{white} }
 \DeclareCaptionFormat{listing}{
@@ -146,6 +147,7 @@
 \tableofcontents
 
 \input{./Hoofdstukken/inleiding.tex}
+\input{./Hoofdstukken/requirements.tex} 
 \input{./Hoofdstukken/ontwerp.tex} 
 \input{./Hoofdstukken/conclusie.tex}
 \input{./Hoofdstukken/evaluatie.tex}
