--- a/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
+++ b/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
@@ -1,5 +1,5 @@
 % !TEX spellcheck = nl_NL
-\section{Shapes}
+\section{Shapes} \label{sec:shapesext}
 Deze sectie zal beschrijven hoe nieuwe Shapes toegevoegd kunnen worden aan de Canvas.hs-omgeving. Eerst wordt beschreven welke aanpassingen aan de JavaScript-zijde moeten plaatsvinden en vervolgens zullen de benodigde aanpassingen aan de Haskell-zijde besproken worden.
 
 \subsection{JavaScript}
