--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -1,10 +1,12 @@
 \chapter{Evaluatie} \label{hoofdstuk:evaluatie}
 
-\section{Problemen, Verbeteringen en aanbevelingen}
+\section{Verbeteringen en aanbevelingen}
 \subsection{Delta updates (met animaties)}
+
+\section{Problemen}
 \subsection{IO Monad afsplitsen}
 
-{\color{red} Onderstaande had ik (Pim) orgineel geschreven voor het problemenstuk, he tmoet nog aangevuld/afgemaakt worden e.d., maar dat is iets wat bij evaluatie kan. Het is over de problemen die we hadden omdat we relatief weinig haskell-kennis hadden}
+{\color{red} Onderstaande had ik (Pim) orgineel geschreven voor het problemenstuk (in ontwerp), he tmoet nog aangevuld/afgemaakt worden e.d., maar dat is iets wat bij evaluatie kan. Het is over de problemen die we hadden omdat we relatief weinig haskell-kennis hadden}
 
 \subsubsection{Kennis Haskell}
 Bij het begin van het Canvas.Hs-project was de kennis over Haskell en functioneel programmeren in het algemeen beperkt tot de kennis opgedaan met het vak Functioneel programmeren. Hoewel dit een solide basis vormt is het doel van Canvas.Hs juist om een aantal concepten die niet binnen dit vak passen af te schermen van de studenten. Dit betekende dat er bij het project van deze concepten gebruik moest worden gemaakt en wij ons deze ook eigen hebben moeten maken. Zoals altijd bij het leren van nieuwe concepten leverde dit af en toe code die niet optimaal gebruik maakte van de mogelijkheden van deze concepten en kinderziektes op. 
@@ -16,6 +18,7 @@ Denk aan do-notatie, binds (>>= / >>) en eigen monad voor de Server (state)
 
 \paragraph{Threads}
 Denk aan geziek met netjes de websockets en http-threads afsluiten en Timer-threads die nu doorlopen
+
 \section{Planning}
 - TODO Planning schrijven
 \section{Samenwerking}
