--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -53,6 +53,6 @@ Onze oplossing is een \inlinecode{Default} typeklasse, een Event heeft een recor
 -TODO: Ontwerpkeuze: Default values
 -TODO: Ontwerpkeuze: Hulpfuncties zoals shape
 -TODO: Ontwerpkeuze: Toelichten acties
--TODO: Ontwerpkeuze: Toelichten van de keuze voor Fullwindow (Ik weet niet precies waarvoor dit is? Staat bij Robert zijn document) \url{https://drive.google.com/#folders/0B97Qa5VgdaDNWjBiOGFEa3JMZHc}
+-TODO: Ontwerpkeuze: Toelichten van de keuze voor Fullwindow Zie \url{https://drive.google.com/#folders/0B97Qa5VgdaDNWjBiOGFEa3JMZHc}
 -TODO: Toelichten waarom we blocking actions hebben
 -TODO: Ontwerpkeuze toelichten: Super key wordt niet als modifier gezien
