Correct de namen in het verslag gezet

--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -31,11 +31,11 @@ Er is gewerkt middels de scrum projectmangement methoden. Er zou gewerkt worden 
 
 \paragraph{Rollen} Er is een verdeling van verantwoordelijkheden gemaakt. Naast de teamleden nam de opdrachgever de rol van \emph{product owner} aan.
 \begin{enumerate}
-    \item \emph{Joost van Doorn} had de taak van \emph{scrum master} en was verantwoordelijk voor het testen van de software.
-    \item \emph{Pim Jager} was notulist voor alle besprekingen en samen met Lennart verantwoordelijk voor de Haskell code.
-    \item \emph{Lennart Buit} was verantwoordelijk voor het protocol en samen met Pim verantwoordelijk voor de Haskell code.
-    \item \emph{Martijn Roo} was samen met Thijs verantwoordelijk voor de JavaScript code.
-    \item \emph{Thijs Scheepers} was verantwoordelijk voor de gebruiksvriendelijkheid uiteindelijke API en samen met Martijn verantwoordelijk voor de JavaScript code.
+    \item \emph{J. van Doorn} had de taak van \emph{scrum master} en was verantwoordelijk voor het testen van de software.
+    \item \emph{P.T. Jager} was notulist voor alle besprekingen en samen met Buit verantwoordelijk voor de Haskell code.
+    \item \emph{L.J. Buit} was verantwoordelijk voor het protocol en samen met Jager verantwoordelijk voor de Haskell code.
+    \item \emph{M.J. Roo} was samen met Scheepers verantwoordelijk voor de JavaScript code.
+    \item \emph{M.J. Scheepers} was verantwoordelijk voor de gebruiksvriendelijkheid uiteindelijke API en samen met Roo verantwoordelijk voor de JavaScript code.
 \end{enumerate}
 
 \paragraph{Besprekingen} Elke samenkomst is er een kortdurende scrumbespreking gehouden. Na aanvang van het project zijn er ook een aantal sprint besprekingen gehouden. Deze sprint besprekingen kwamen altijd na het gesprek met de opdrachtgever. Er bleek al snel dat onze afgesproken sprint van twee werken wel erg kort was om elke twee weken dat er samengekomen werd een nieuwe lange sprintbespreking te houden. Dus er werd uiteindelijk voor gekozen om de besprekingen met de projectgroep te beperkingen tot de dagelijkse korte besprekingen.
