--- a/titlepage.tex
+++ b/titlepage.tex
@@ -28,18 +28,18 @@
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Auteurs:}\\
-Joost \textsc{van Doorn}\\
-Lennart \textsc{Buit}\\
-Pim \textsc{Jager}\\
-Thijs \textsc{Scheepers}\\
-Martijn \textsc{Roo}
+J. \textsc{van Doorn}\\
+L.J. \textsc{Buit}\\
+P.T. \textsc{Jager}\\
+M.J. \textsc{Scheepers}\\
+M.J. \textsc{Roo}
 \end{flushleft}
 \end{minipage}
 ~
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushright} \large
 \emph{Begeleider:} \\
-Robert \textsc{de Groote}
+E. \textsc{de Groote}
 \end{flushright}
 \end{minipage}\\[4cm]
 
